examples/test/testpolicy16551.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16551
  namespace: namespace420
spec:
  podSelector:
    matchLabels:
      key16: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value47
          key25: value40
      podSelector:
        matchLabels:
          key16: value8
          key7: value43
          key9: value33
